<resources>
    <!-- App name -->
    <string name="app_name">Lexicon Dictionary</string>

    <!-- Long texts -->
    <string name="txt_enterText">Tap to enter text</string>
    <string name="txt_noImage">No image added.</string>
    <string name="txt_noVoice">No pronunciation added.</string>
    <string name="txt_exchangeDesc">Button to swap the translation languages</string>
    <string name="txt_addPopMsg">Would you like to add a new entry into the database?</string>

    <!-- Title name -->
    <string name="title_activity_add">Add/Edit entry</string>
    <string name="title_activity_display">Translation</string>
    <string name="title_addNewEntry">Adding new Entry</string>
    <string name="title_editEntry">Editing Entry</string>
    <string name="title_popup_add">New Entry</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">Register New Account</string>

    <!-- Short texts -->
    <string name="text_original">Original</string>
    <string name="text_originalWord">Original word</string>
    <string name="text_translated">Translated</string>
    <string name="text_translatedWord">Translated word</string>
    <string name="text_language">Language</string>
    <string name="text_target">Target</string>
    <string name="text_photo">Photo:</string>
    <string name="text_relatedPhoto">Related Photo</string>
    <string name="text_sentiment">Sentiment Strength</string>
    <string name="text_negative">Negative</string>
    <string name="text_positive">Positive</string>
    <string name="text_rating">Accuracy Rating</string>
    <string name="text_newTranslate">New Translation</string>
    <string name="text_history">History</string>
    <string name="text_moodtags">Mood Tags</string>
    <string name="text_test">Testing</string>
    <string name="text_validate">Validate</string>
    <string name="text_noResult">No Result</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_pronunciation">Pronunciation:</string>
    <string name="text_relatedPronunciation">Related Pronunciation</string>
    <string name="text_sentics">Sentics</string>
    <string name="text_pleasantness">Pleasantness</string>
    <string name="text_attention">Attention</string>
    <string name="text_sensitivity">Sensitivity</string>
    <string name="text_aptitude">Aptitude</string>
    <string name="text_email">Email</string>

    <!-- Button texts -->
    <string name="button_add">Add</string>

    <!-- Spinner items -->
    <string-array name="languages">
        <item>English</item>
        <item>Malay</item>
        <item>Mandarin</item>
    </string-array>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_login">Username and/or Password is invalid</string>
    <string name="error_field_required">This field is required</string>

    <!-- Strings related to registration -->
    <string name="action_sign_up">Sign Up</string>
    <string name="error_invalid_register">Username is used</string>

    <!-- Strings related to image content description -->
    <string name="contentDesc_relatedPhoto">Photo related to the text</string>
    <string name="contentDesc_relatedPronunciation">Pronunciation related to the text</string>

    <!-- Strings related to url -->
    <string name="url_checkUser">http://i2hub.tarc.edu.my:8117/checkUser.php?</string>
    <string name="url_selectHistory">http://i2hub.tarc.edu.my:8117/selectHistory.php?</string>
    <string name="url_selectSpecImage">http://i2hub.tarc.edu.my:8117/selectSpecImage.php?</string>
    <string name="url_selectSpecDetail">http://i2hub.tarc.edu.my:8117/selectSpecDetail.php?</string>
    <string name="url_selectSpecTDetail">http://i2hub.tarc.edu.my:8117/selectSpecTDetail.php?</string>
    <string name="url_selectSpecTDetail2">http://i2hub.tarc.edu.my:8117/selectSpecTDetail2.php?</string>
    <string name="url_selectSpecUser">http://i2hub.tarc.edu.my:8117/selectSpecUser.php?</string>
    <string name="url_selectSpecWord">http://i2hub.tarc.edu.my:8117/selectSpecWord.php?</string>
    <string name="url_writeAttachment">http://i2hub.tarc.edu.my:8117/writeAttachment.php?</string>
    <string name="url_updateAttachment">http://i2hub.tarc.edu.my:8117/updateAttachment.php?</string>
    <string name="url_writeAttachmentG">http://i2hub.tarc.edu.my:8117/writeAttachmentG.php?</string>
    <string name="url_writeUser">http://i2hub.tarc.edu.my:8117/writeUser.php?</string>
    <string name="url_writeWord">http://i2hub.tarc.edu.my:8117/writeWord.php?</string>
    <string name="url_updateWord">http://i2hub.tarc.edu.my:8117/updateWordG.php?</string>
    <string name="url_writeHistory">http://i2hub.tarc.edu.my:8117/writeHistory.php?</string>
    <string name="text_semantic">Semantics</string>
</resources>
