<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.family.lexicondictionary.DisplayActivity"
    android:orientation="vertical"
    android:weightSum="10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginTop="3dp"
        android:weightSum="7">

        <Spinner
            android:id="@+id/translateFrom"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="2dp"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"
            android:layout_weight="3" />

        <ImageButton
            android:id="@+id/exchange"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@android:color/white"
            android:onClick="exchange"
            android:padding="7dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/exchange_button" />

        <Spinner
            android:id="@+id/translateTo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="2dp"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"
            android:layout_weight="3" />

    </LinearLayout>

    <EditText
        android:id="@+id/originalWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/txt_enterText"
        android:inputType="text|textAutoCorrect"
        android:singleLine="false"
        android:textAlignment="textStart"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="81dp" />

    <TextView
        android:id="@+id/translatedWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:gravity="start"
        android:textAlignment="textStart"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:text="@string/text_sentiment"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_negative"
            android:textAlignment="textStart"
            android:gravity="start"
            android:textColor="@android:color/black"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_positive"
            android:textAlignment="textEnd"
            android:gravity="end"
            android:textColor="@android:color/black"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:indeterminate="true" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:text="@string/text_rating"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:gravity="center"/>

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:numStars="@integer/ratingStarsNum" />

</LinearLayout>
